# dash_magic_mirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
client/: .xinitrc  kiosk_loader.html
src/app/: config.py  core_callbacks.py  core_layout.py  main.py  main_new.py  main_old.py
src/assets/: main.css
src/components/: base.py  clock.py  compliments_jokes.py  google_calendar.py  news.py  news_compliments.py  orig_google_calendar.py  orig_weather.py  sports.py  tfl_arrivals.py  tfl_arrivals_old.py  weather.py
src/components/google_calendar/: README.md  __init__.py  callbacks.py  component.py  data.py  full_screen.py  layout.py  rendering.py  summary.py  utils.py
src/components/google_calendar/old_files/: utils.py
src/components/header/: __init__.py  component.py  constants.py  data.py  full_screen.py  summary.py
src/components/sports/: __init__.py  component.py  constants.py  data.py  full_screen.py  summary.py
src/components/tfl_arrivals/: __init__.py  component.py  constants.py  data.py  full_screen.py  summary.py
src/components/weather/: __init__.py  component.py  constants.py  data.py  full_screen.py  summary.py
src/utils/: calendar.py  constants.py  data_repository.py  dates.py  file_cache.py  models.py  styles.py
